Update language button

--- a/BDOLanguageUpdater.WPF/Views/MainWindow.axaml
+++ b/BDOLanguageUpdater.WPF/Views/MainWindow.axaml
@@ -18,11 +18,14 @@
     <TabControl>
 		
         <TabItem Header="General" >
-            <StackPanel DataContext="{Binding GeneralTabViewModel}" Orientation="Horizontal" Spacing="10" Margin="10" VerticalAlignment="Top">
+          <StackPanel DataContext="{Binding GeneralTabViewModel}" Orientation="Vertical" Spacing="10" Margin="10" VerticalAlignment="Top">
+            <StackPanel Orientation="Horizontal" Spacing="10" VerticalAlignment="Top">
                 <TextBlock Text="BDO Path:" TextAlignment="Right" VerticalAlignment="Center"/>
                 <TextBox Text="{Binding BDOPath}"  Watermark="{Binding BDOPath}" Width="400" VerticalAlignment="Center"/>
                 <Button Content="Browse" Click="Browse" VerticalAlignment="Center"/>
             </StackPanel>
+            <Button Name="UpdateLanguageButton" Content="Update Language" Click="UpdateLanguage" VerticalAlignment="Center"/>
+          </StackPanel>
         </TabItem>
 
         <TabItem Header="Advanced" >
