Multiple fixes and UI added to configure startup initialization

--- a/BDOLanguageUpdater.WPF/Views/MainWindow.axaml
+++ b/BDOLanguageUpdater.WPF/Views/MainWindow.axaml
@@ -31,6 +31,7 @@
         <TabItem Header="Advanced" >
             <StackPanel DataContext="{Binding AdvancedTabViewModel}" Spacing="10">
                 <ToggleSwitch Content="Hide to Tray On Close" IsChecked="{Binding HideToTrayOnClose}" Margin="0,5,0,0"/>
+                <ToggleSwitch Content="Open On Startup" IsChecked="{Binding OpenOnStartup}" Margin="0,5,0,0"/>
             </StackPanel>
         </TabItem>
 		
